@startuml

title __RESPONSIBILITYCHAIN's Class Diagram__\n

  namespace com.atguigu.responsibilitychain {
    abstract class com.atguigu.responsibilitychain.Approver {
        ~ name : String
        + Approver()
        {abstract} + processRequest()
        + setApprover()
    }
  }
  

  namespace com.atguigu.responsibilitychain {
    class com.atguigu.responsibilitychain.Client {
        {static} + main()
    }
  }
  

  namespace com.atguigu.responsibilitychain {
    class com.atguigu.responsibilitychain.CollegeApprover {
        + CollegeApprover()
        + processRequest()
    }
  }
  

  namespace com.atguigu.responsibilitychain {
    class com.atguigu.responsibilitychain.DepartmentApprover {
        + DepartmentApprover()
        + processRequest()
    }
  }
  

  namespace com.atguigu.responsibilitychain {
    class com.atguigu.responsibilitychain.PurchaseRequest {
        - id : int
        - price : float
        - type : int
        + PurchaseRequest()
        + getId()
        + getPrice()
        + getType()
    }
  }
  

  namespace com.atguigu.responsibilitychain {
    class com.atguigu.responsibilitychain.SchoolMasterApprover {
        + SchoolMasterApprover()
        + processRequest()
    }
  }
  

  namespace com.atguigu.responsibilitychain {
    class com.atguigu.responsibilitychain.ViceSchoolMasterApprover {
        + ViceSchoolMasterApprover()
        + processRequest()
    }
  }
  

  com.atguigu.responsibilitychain.Approver o-- com.atguigu.responsibilitychain.Approver : approver
  com.atguigu.responsibilitychain.CollegeApprover -up-|> com.atguigu.responsibilitychain.Approver
  com.atguigu.responsibilitychain.DepartmentApprover -up-|> com.atguigu.responsibilitychain.Approver
  com.atguigu.responsibilitychain.SchoolMasterApprover -up-|> com.atguigu.responsibilitychain.Approver
  com.atguigu.responsibilitychain.ViceSchoolMasterApprover -up-|> com.atguigu.responsibilitychain.Approver


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
